--- a/src/components/CodeEditor/container.scss
+++ b/src/components/CodeEditor/container.scss
@@ -1,7 +1,7 @@
 .container {
-  width: 55%;
-  height: 100%;
+  min-height: 45em;
   border-radius: 15px;
-  border: 5px solid black;
+  border: 5px solid #000000;
   box-shadow: 10px 5px 5px lightskyblue;
+  width: 50em;
 }
