--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -40,8 +40,29 @@
   @include shadow-border;
   float: right;
   margin-top: 1em;
-  height: 3em;
+  height: 3.5em;
   width: 12em;
   font-size: 1em;
   background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  border: 0.5em solid dimgray;
+  border-top: 0.5em solid $main-color;
+  border-radius: 50%;
+  width: 1.5em;
+  height: 1.5em;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
