some better colors

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -20,7 +20,7 @@
 
 .output {
   background-color: #1e1e1e;
-  color: $main-color;
+  color: skyblue;
   width: 95%;
   height: 8em;
   padding: 1em;
@@ -51,7 +51,7 @@
 
 .loader {
   border: 0.5em solid dimgray;
-  border-top: 0.5em solid $main-color;
+  border-top: 0.5em solid skyblue;
   border-radius: 50%;
   width: 1.5em;
   height: 1.5em;
