--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -22,15 +22,23 @@
   background-color: #1e1e1e;
   color: skyblue;
   width: 95%;
-  height: 8em;
+  height: 15em;
   padding: 1em;
   @include border;
+  overflow: auto;
+  white-space: pre-line;
+}
+
+.response-title{
+  font-size: 25px;
+  margin: 0;
+  color: skyblue;
 }
 
 #input {
   resize: vertical;
   width: 94%;
-  height: 10em;
+  height: 8em;
   padding: 1em;
   @include shadow-border;
   font-size: 1.5em;
